--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgba(36, 36, 36, var(--tw-bg-opacity));
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,20 +20,26 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
+  padding:0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  flex-direction: column; /* Center the content vertically */
+  align-items: center;
+  justify-content: center;
   min-height: 100vh;
+  background-image: url("/src/assets/background-sea.png");
+  background-size: cover;
+  background-position: center;
 }
 
 h1 {
-  font-size: 3.2em;
+  @apply text-4xl lg:text-5xl xl:text-6xl;
   line-height: 1.1;
 }
 
@@ -46,22 +54,33 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+/* Tailwind CSS */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --tw-text-opacity: 1;
+    color: rgba(33, 53, 71, var(--tw-text-opacity));
+    --tw-bg-opacity: 1;
+    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
