--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -7,6 +7,7 @@
   white-space: nowrap;
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-left: 20px;
 }
 ::-webkit-scrollbar {
   display: none;
