--- a/src/pages/LevelSelector.css
+++ b/src/pages/LevelSelector.css
@@ -30,8 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+  justify-content: flex-start; /* Ensure content starts below navbar */
   background-image: url("/src/assets/background-sea.png");
   background-size: cover;
   background-position: center;
@@ -105,8 +104,9 @@ button:focus-visible {
   background-color: #007bff;
   color: white;
   width: 100%;
-  position: fixed;
+  position: fixed; /* Make navbar fixed */
   top: 0;
+  left: 0; /* Ensure navbar is positioned at the top left corner */
   z-index: 10;
   box-sizing: border-box;
 }
@@ -172,7 +172,7 @@ button:focus-visible {
   position: relative;
   width: 100%;
   height: calc(100vh - 60px); /* Adjust height based on navbar */
-  margin-top: 60px;
+  margin-top: 60px; /* Ensure content is below the navbar */
 }
 
 /* Connecting bubbles */
