--- a/src/pages/LevelSelector.css
+++ b/src/pages/LevelSelector.css
@@ -95,6 +95,41 @@ button:focus-visible {
 @tailwind components;
 @tailwind utilities;
 
+/* Navbar styles */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  box-sizing: border-box;
+}
+
+.navbar .nav-left {
+  display: flex;
+  align-items: center;
+}
+
+.navbar .nav-left img {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.navbar .nav-right {
+  display: flex;
+  align-items: center;
+}
+
+.navbar .nav-right img {
+  margin-left: 10px;
+  border-radius: 50%;
+}
+
 /* Level bubble styles */
 .level-bubble {
   display: inline-flex;
@@ -103,8 +138,30 @@ button:focus-visible {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 2px solid #ccc;
+  background: radial-gradient(
+      87.21% 87.21% at 24.02% 15.74%,
+      rgba(255, 255, 255, 0.8) 0%,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    radial-gradient(
+      54.38% 54.38% at 46.18% 78.35%,
+      rgba(157, 201, 241, 0.5) 0%,
+      rgba(157, 201, 241, 0) 100%
+    ),
+    radial-gradient(
+      53.98% 53.98% at 26.54% 62.76%,
+      rgba(157, 201, 241, 0.8) 0%,
+      rgba(157, 201, 241, 0) 100%
+    ),
+    radial-gradient(
+      57.88% 57.88% at 84.08% 48.6%,
+      rgba(141, 124, 246, 0.8) 0%,
+      rgba(150, 101, 255, 0) 95.31%
+    ),
+    #76a3fb;
+ 
+  opacity: 0.8;
+  backdrop-filter: blur(2px);
   position: absolute;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   animation: float 4s ease-in-out infinite;
@@ -144,10 +201,15 @@ button:focus-visible {
   width: 100%;
   height: 100%;
   pointer-events: none; /* Make sure connecting bubbles are not clickable */
-  background-image: url("/src/assets/connecting-bubbles.png"); /* Ensure this image exists */
-  background-size: contain;
-  background-repeat: no-repeat;
   animation: moveBubbles 4s ease-in-out infinite;
+}
+
+.dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: white;
+  position: absolute;
 }
 
 /* Animation for connecting bubbles */
