--- a/src/CategorySelector.css
+++ b/src/CategorySelector.css
@@ -1,14 +1,3 @@
-/* .background-container {
-    background-image: url('./img/background.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 body {
     background-image: url(/src/img/background.png);
     background-size: cover;
@@ -29,85 +18,15 @@ body {
     padding: 0 1rem;
     height: fit-content;
     position: absolute;
-    /* Add this line to enable positioning */
     top: 0;
-    /* Position it at the top */
     left: 0;
-    /* Position it at the left */
     margin: 1rem;
-    /* Optional: Add margin to avoid touching the edges */
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    width: 40%;
-    color: black;
-    background-color: #EEE0C9;
-    padding: 0;
-}
-
-.card p {
-    color: #095179;
-    font-family: OpenDyslexic3;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 700;
-    margin: 0;
-    letter-spacing: 0.326px;
-}
-
-.categoriescard .card:nth-of-type(2),
-.categoriescard .card:nth-of-type(3) {
-    opacity: 0.6;
-    filter: blur(0.25px);
-}
-
-.card p:nth-of-type(2) {
-    font-size: 1rem;
-    padding-top: 10px;
-}
-
-.card img {
-    width: 100%;
 
 }
 
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.container {
-    text-align: left;
-    padding: 2%;
-    display: flex;
-    flex-direction: column;
-}
-
-.container-row img {
-    width: fit-content;
-}
-
-.container-row {
-    display: flex;
-    flex-direction: row;
-    gap: 70px;
-}
-
-.categoriescard {
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
-}
-
-.image-container {
-    position: relative;
-}
-
-.image-container img.lock {
+.info-icon {
     position: absolute;
-    top: 0;
-    right: 0;
-    width: fit-content;
-    height: 50px;
+    bottom: 50px;
+    right: 20px;
+
 }
